# medical-rag

./: .gitignore  CLAUDE.md  pyproject.toml
.claude/: settings.local.json
docs/: architecture-and-qa-service.md  bert-inference-optimization.md  elasticsearch-setup.md  ik-plugin-install.md  redis-cache-design.md  redis-stack-vector-search.md
scripts/: ingest_data.py
src/: __init__.py  config.toml
src/base/: __init__.py  config.py  log_config.py  logger.py
src/bert/: build_engine.py  build_trt.py  embedding.py  export_onnx.py  intent.py  onnx_engine.py  tensorrt_engine.py  trt_sdk.py
src/bert/torch_custom/: optimum_engine.py  ort_engine.py  trt_engine.py
src/cache/: __init__.py  redis_cache.py
src/embeddings/: __init__.py  build_trt.py  download_model.py  embedding.py  embedding_bck.py  export_onnx.py  sentence_transformer_embedding.py  tensorrt_embedding.py
src/es/: __init__.py  store.py
src/service/: qa_service.py
