[project]
name = "medical-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "addict>=2.4.0",
    "chromadb>=1.5.9",
    "datasets>=5.0.0",
    "elasticsearch>=8.0,<9.0",
    "fastapi>=0.138.0",
    "flagembedding>=1.4.0",
    "jieba>=0.42.1",
    "langchain>=1.3.7",
    "langchain-chroma>=1.1.0",
    "langchain-classic>=1.0.8",
    "langchain-community==0.4.1",
    "langchain-core>=1.4.6",
    "langchain-ollama>=1.1.0",
    "langchain-openai>=1.3.0",
    "langchain-text-splitters>=1.1.2",
    "langchain-unstructured>=1.0.1",
    "langgraph>=1.2.4",
    "llama-index>=0.14.22",
    "markdown>=3.10.2",
    "milvus-model>=0.2.12",
    "modelscope>=1.37.1",
    "mypy-extensions>=1.1.0",
    "numexpr>=2.14.1",
    "onnx>=1.22.0",
    "onnxruntime-gpu>=1.27.0",
    "onnxscript>=0.7.0",
    "opencv-python-headless>=4.13.0.92",
    "opentelemetry-proto>=1.11.1",
    "optimum>=2.1.0,<2.2.0",
    "optimum-onnx[onnxruntime-gpu]>=0.1.0",
    "pandas>=3.0.3",
    "peft>=0.19.1",
    "pydantic>=2.13.4",
    "pymilvus>=3.0.0",
    "pymupdf>=1.27.2.3",
    "pymysql>=1.2.0",
    "pytest>=9.1.1",
    "python-docx>=1.2.0",
    "python-dotenv>=1.2.2",
    "python-pptx>=1.0.2",
    "ragas>=0.4.0",
    "rank-bm25>=0.2.2",
    "rapidocr-paddle>=1.4.5",
    "redis>=8.0.0",
    "rich>=13.7.0,<15.0.0",
    "streamlit>=1.58.0",
    "tensorrt",
    "tokenizers>=0.22.0,<=0.23.0",
    "torch==2.12.0",
    "torchvision==0.27.0",
    "transformers>=4.57.6",
    "unstructured>=0.23.1",
]

[tool.uv]
exclude-dependencies = ["onnxruntime"]

[[tool.uv.index]]
name = "tencent"
url = "https://mirrors.cloud.tencent.com/pypi/simple/"
default = true

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[tool.uv.sources]
torch = [
  { index = "pytorch-cu130", marker = "sys_platform == 'win32'" },
]
torchvision = [
  { index = "pytorch-cu130", marker = "sys_platform == 'win32'" },
]
